Changed base font for headers, fixed spacing in Movie

--- a/app/styles/components/CardList.scss
+++ b/app/styles/components/CardList.scss
@@ -76,7 +76,7 @@
 }
 
 .dv-star-rating-star {
-  margin-right: 6px;
+  margin: 0 6px 0 0;
   color: $card-list-color;
 }
 
