--- a/app/styles/components/Item.scss
+++ b/app/styles/components/Item.scss
@@ -26,7 +26,7 @@
     z-index: 10;
 
     img {
-      box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.5), 0 6px 20px 0 rgba(0, 0, 0, 05);
+      box-shadow: rgba(0, 0, 0, 0.6) 0 6px 16px 4px;
     }
   }
 }
