--- a/app/styles/components/Movie.scss
+++ b/app/styles/components/Movie.scss
@@ -22,4 +22,27 @@
     top: 0;
     z-index: -1;
   }
+
+  .Movie--status {
+    height: 10px;
+    width: 10px;
+    border-radius: 100%;
+  }
+
+  i {
+    color: white;
+  }
+
+  .dv-star-rating-star {
+    font-size: 1.6rem;
+  }
+
+  .Movie--status-container * {
+    display: inline-block;
+    margin: 5px;
+  }
+
+  #genres * {
+    text-transform: capitalize;
+  }
 }
